--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div class="ss"><div class="a">
+	</div ></div>
 </body>
 
 </html>
